res/css/styles.css
body {

}

@font-face { 
	font-family: "Fish"; 
	src: url("../Fonts/Stark.OTF"); 
	font-weight: normal;
    font-style: normal;
}

.container {
	font-family: "Fish"; 
	margin-top: 20px;
	width: 1024px;
	height: 620px;
	background-color: #FD90D8;
	position: relative;
}

.keyboard{
	position: absolute;
	top: -20px;
	left: -20px;
}

.table-hs{
	position: absolute;
	width:300px;
	left: 7px;
	top: 12px;
}

.uni1, .uni2,.uni3 {
	position: absolute;
	width:100px;
	height: 100px;
	left:20px;	
}

.uni2 {
	top:120px;
}

.uni3 {
	top:240px;
}

#stats1, #stats2, #stats3, #stats4{
	position: absolute;
	left:150px;
}

#stats1{
	top: 40px;
}

#stats2{
	top: 150px;
}

#stats3{
	top: 270px;
}


.game-over{
	font-family: "Fish";
	font-size: 18px;
	position: absolute;
	width: 380px;
	height: 200px;
	background: #f8d2e7;
	left: 31%;
	top: 160px;
	opacity: 0.9;
	border-radius: 60px;
	border-color: #000;
	border-width: 3px;
    border-style: solid;
    z-index: 5;
}

.start .help-view {
	font-family: "Fish"; 
	margin-top: 20px;
	margin-bottom: 20px;
	height: 560px;
	display: block;
	position: relative;
}

.hs-winner, .hs-loser{
	position: absolute;
	width: 150px;
	height: 250px;
	text-align: center;
}

.hs-winner{
	left: 70px;
}

.hs-loser{
	left: 250px;
}

.highscore-view{
	margin-top: 20px;
	margin-bottom: 20px;
	height: 560px;
	display: block;
	position: relative;
}

.highscore-list{
	position: absolute;
	width: 315px;
	height: 330px;
	left: 600px;
	bottom: 100px;
	overflow: auto;
	border-radius: 20px;
	background: #EEE;
	opacity: 0.7;
}

.grass1{
	margin-top: 20px;
}

.grass2, .grass3{
	margin-top: 50px;
}

.grass4{
	position: absolute;
	left: 600px;
	width: 315px;
	bottom: 100px;
	opacity: 0.7;
	border-radius: 20px;
}

.statistics{
	position: absolute;
	background: #EEE;
	width: 400px;
	height: 330px;
	left: 72px;
	bottom: 100px;
	text-align: center;
	border-radius: 20px;
	opacity: 0.7;
	overflow: hidden;
}

.table{
	position: absolute;
	text-align: center;
	width:200px;
	left:200px;
}

.highscore-title{
	position: absolute;
	left:225px;
}

.highscore-players{
	position: absolute;
	width:500px;
	height:150px;
	left: 355px;
	top: 150px;
}

.highscore-results{
	position: absolute;
	width: 500px;
	height: 80px;
	left: 400px;
	top: 300px;
}

.game-over-btn{
	width: 130px;
	height: 40px;
	margin-top: 50px;
	margin-left: 32px;
}

.help-image{
	width: 150px;
	height: 120px;
	float:left;
}

.hs-button{
	width: 320px;
	margin-top: 20px;
	position: absolute;
	left: 350px;
}

.highscore-menu{
	position: absolute;
	bottom: 20px;
	left: 250px;
}

.reset{
	position: absolute;
	bottom: 20px;
	left: 467px;
}

#wins-2{
	margin-left: 90px;
}

.highscore-text{
	float: left;
	margin-right: 100px;
	text-align: center;
}


#attack-icon{
	position: absolute;
	left: 34%;
	top: 5%;
}

.attack-icon-invisible{
	-webkit-opacity: 0;
	-webkit-transition: all 1s ease;
}

.attack-icon-visible{
	-webkit-opacity: 0.9;
	-webkit-transition: all 1s ease;
}

.highscore{
	position: absolute;
}

#header2 {
	margin-top: 20px;
	z-index: 0;
}

.invisible {
	display:none;
}

.header {
	width: 600px;
	margin-left: auto;
  	margin-right: auto;
	height: 150px;
	position: relative;
}

.text {
	text-align: center;
	font-family: "Fish";
}

.button{
	margin-top: 20px;
	height: 90px;
	width: 300px;
	margin-left: auto;
	margin-right: auto;
	position: relative;
}

.help{
	font-family: "Fish"; 
	width: 50px;
	height: 50px;
	position: absolute;
	right: 20px;
	bottom: 20px;
	display: table-cell;
    vertical-align: middle;
}

.progress-attack, .progress-defense, .progress-awesomeness{
	position: absolute; 
	width: 150px;
	height: 15px;
	margin-left: 120px;
}

.progress-attack{
	margin-top: 30px;
}

.progress-defense{
	margin-top: 65px;
}

.progress-awesomeness{
	margin-top: 100px;
}

.attackP1, .defenseP1, .awesomenessP1, .nameP1{
	position: absolute;
	margin-left: 120px;
}

.attackP2, .defenseP2, .awesomenessP2{
	position: absolute;
}

.attackP2{
	margin-left: 221px;
}

.defenseP2{
	margin-left: 190px;
}

.awesomenessP2{
	margin-left: 177px;
}

.nameP1, .nameP2{
	margin-top: -10px;
	font-weight: bold;
}

.nameP2{
	right: 0;
	margin-right: 116px;
	position: absolute;
}

.attackP1, .attackP2{
	margin-top: 10px;
}

.defenseP1, .defenseP2{
	margin-top: 45px;
}

.awesomenessP1, .awesomenessP2{
	margin-top: 80px;
}

.power-p2{
	margin-left: -85px;
}

.power-p1, .power-p2{
	margin-top: 20px;
	opacity: 1.0;
}

.progress {
	margin: 0 50px 0 50px; 
	width: 300px;
}

.rotated{
	-webkit-transform: 	rotate(-180deg);
    -moz-transform: 	rotate(-180deg);
    -ms-transform: 		rotate(-180deg);
    -o-transform: 		rotate(-180deg);
    transform: 			rotate(-180deg);
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2)
}

.box {
	position: absolute;
	margin-top: 20px;
}

#box-p1{
	left: 0px;
}

#box-p2 {
	right: 40px;
}

.avatar, #avatar1, #avatar2 {	
	margin: 40px 20px 0 20px;
	width: 60px;
	height: 60px;
	position: absolute;	
	z-index: 4;
}

.blue {
	background-color: #126BC4;
}

.green {
	background-color: #10841A;
}

#avatar-p1 {	
	left: -23px;
	bottom: 15px;
}

#avatar-p2 {
	right: 14px;
	bottom: 15px;	
}

.display {
	position: absolute;
	z-index: 3;
}

#icon_sound, #icon_music{
	position: absolute;
	bottom: 20px;
	left: 25px;
	width: 40px;
	height: 40px;
}

#icon_sound{
	left: 70px;
}

#loose1{
	right: 0px;
	width: 200px;
	height: auto;
}

#display-p1 {
	left: 20px;
}

#display-p2 {
	right: 20px;
}

#progress-p1 {
	left: 0px;
}

#progress-p2 {
	right: 0px;
}

.instr, #instr-list-p1{
	font-family: "Fish";
	list-style-type: none;
	list-style-position: outside;
}

.list-item{
	opacity: 1;
	height: 30px;
}


.instructions {
	overflow: hidden;
	margin-top: 20px;
	position: absolute;
	background-color: #EEE;
	opacity: 0.7;
	width: 400px;
	height: 100px;
	z-index: -2;
	border-radius: 10px;
	-webkit-transition: background 0.2s ease-in-out;
    -moz-transition:    background 0.2s ease-in-out;
    -ms-transition:     background 0.2s ease-in-out;
    -o-transition:      background 0.2s ease-in-out;
    transition:         background 0.2s ease-in-out;
}

.instructions-demo {
	overflow: hidden;
	margin-top: 20px;
	position: absolute;
	background-color: #EEE;
	opacity: 0.5;
	width: 400px;
	height: 100px;
	border-radius: 10px;
}

.placeholder-demo{
	width: 60px;
	height: 60px;
	position: absolute;
	z-index: 4;
	left: -20px;
	top: -15px;
}

#instructions-p1 {
	left: 0px;
}

#instructions-p2 {
	right: 0px;
}

.instr-key{
	left: 230px;
	top: -40px;
	color: white;
	opacity: 1;
}

#key-p1, #key-p2{
	top: 20px;
	left: 20px;
}


.instr-text {
	position: absolute;
	margin: 20px 20px 20px 60px;
}

.game {
	position: absolute;
	width: 1030px;
	top: 20px;
	z-index: 1;
}

.animation {
	position: absolute;
	top: 200px;
	width: auto;
	height: auto;
}

#animation-p1 {
	left: 20px;
}

#animation-p2 {
	right: 20px;
}

#pinkyAnimation {
	z-index: 0;
}

.range-slider{
	-webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
    -o-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
    margin-top: 70px;
}

.inputs{
	width: 600px;
	margin:0 auto;
	height: 400px;
	position: absolute;
	left: 350px;
}

.img-right{
	margin-top: 10px;
	width:110px;
	height:110px;
	position:absolute;
  	top:0;
  	right:0;
  	opacity: 1.0;
}

.img-left{
	margin-top: 10px;
	width:110px;
	height:110px;
	float: left;
	opacity: 1.0;
}

.head{
	margin:0 auto;
	width:1000px;
	height: 150px;
	position: relative;
}

#description-left{
  	left: 0;
}

#description-right{	
  	right:5px;
}

.description {
	width:300px;
	height:150px;
	background-color: #EEE;
	position:absolute;
	border-radius: 10px;
	border-color: #126BC4;
	opacity: 0.8;
  	top:0;
  	z-index: 1;
  	border-width: 1px;
    border-style: solid;
}

.descr-text{
	width:200px;
	margin-right: 525px;
	margin-top: 10px;
	text-align: right;	
}

#descr-1{
	margin-top: 10px;
	margin-left: 115px;
}

.st-button, .st-demo-button{
	position: absolute;
	width: 300px;
	height:90px;	
}

.st-button{
	left:10px;
	bottom:20px;
}

.st-demo-button{
	margin-top: -20px;
	left:370px;
	bottom:250px;
}

.next-step{
	position: absolute;
	left: 422px;
	bottom: 100px;
}

#demo-btn{
	width: 60%;
	height: 60%;
}

.start-game-descr, .game-descr{
	height: 150px;
	width:600px;
	margin-top: 10px;
}

.player-select-descr{
	height: 150px;
	width:1000px;
	margin-top: 10px;
}


.help-text{
	font-family: "Fish";
	position: absolute;
	top: 100px;
	text-align: center;
	left: 150px;
	right: 150px;
}

.demo-cube{
	position: absolute;
	bottom:180px;
	margin-top: -20px;
	margin-left:400px;
}

#box-demo{
	position: absolute;
	left: 320px;
	top: 275px;
}

#demo-keyboard{
	top: -180px;
}

.circle-1, .circle-2{
	position: absolute;
	width:50px;
	height:50px;
	border-radius:25px;
	font-size:50px;
	color:#fff;
	line-height:50px;
	text-align:center;
	background:#d090b5;
	bottom: 100px;
	right:200px;
}

.circle-2{
	left: 180px;
}

.pointers{
	position: absolute;
	text-align: center;
	bottom: 3px;
}

.sound-icon-hover, .snd-button{
	width: 100px;
	height: 27px;
	position: absolute;
}

.sound-icon-hover{	
	bottom: 10%;
	margin-left: 10px;
}

.snd-button{
	background-color: #71FA71;
	border-radius: 20px;
	text-align: center;
	vertical-align: middle;
	border-color: #8C8783;
	border-width: 1px;
    border-style: solid;
}

#arrow_back{
	width: 40px;
	height: 40px;
	position: absolute;
}

#arrow_back_div {
	top: 30px;
	left: 0px;
	width: 45px;
	height: 45px;
	position: absolute;
	border: 3px solid #555;
	border-radius: 30px;
	opacity: 0.5;
	z-index: 10;
}

table.table-hs {border-radius: 10px; border-spacing: 0; border-collapse: separate; }

table.table-hs td, table.table-hs th {  padding: 5px 12px; border-bottom: 1px solid #FD90D8; border-right: 1px solid #FD90D8; }
table.table-hs th { background: #FD90D8; color: white; }

table.table-hs tr:last-child td:first-child {
    border-bottom-left-radius:10px;
}

table.table-hs tr:last-child td:last-child {
    border-bottom-right-radius:10px;
}

table.table-hs tr th:first-child,
table.table-hs tr td:first-child {
   border-left: 1px solid #FD90D8;
}

table.table-hs tr:first-child th,
table.table-hs tr:first-child td {
   border-top: 1px solid #FD90D8;
}

table.table-hs tr:first-child th:first-child,
table.table-hs tr:first-child td:first-child {
    border-top-left-radius:10px
}

table.table-hs tr:first-child th:last-child,
table.table-hs tr:first-child td:last-child {
    border-top-right-radius:10px
}

/* ── Rainbow Shimmer ── */
@keyframes rainbow-shimmer {
  0%   { filter: hue-rotate(0deg)   drop-shadow(0 0 12px rgba(255,100,200,0.9)) brightness(1.05); }
  25%  { filter: hue-rotate(90deg)  drop-shadow(0 0 18px rgba(100,200,255,0.9)) brightness(1.12); }
  50%  { filter: hue-rotate(180deg) drop-shadow(0 0 12px rgba(180,100,255,0.9)) brightness(1.05); }
  75%  { filter: hue-rotate(270deg) drop-shadow(0 0 18px rgba(255,220,50,0.9))  brightness(1.12); }
  100% { filter: hue-rotate(360deg) drop-shadow(0 0 12px rgba(255,100,200,0.9)) brightness(1.05); }
}

#start-button img,
.hs-button,
#start-ps {
  animation: rainbow-shimmer 2.4s ease-in-out infinite;
  transition: transform 0.15s ease;
}

@keyframes hover-pulse {
  0%, 100% { transform: scale(1); }
  50%       { transform: scale(1.18); }
}

#start-button img:hover,
.hs-button:hover,
#start-ps:hover {
  animation: rainbow-shimmer 2.4s ease-in-out infinite,
             hover-pulse 0.6s ease-in-out infinite;
}

/* ── Skill bar: animated sweep + rainbow shimmer ── */
.progress-bar {
  transition: width 0.7s cubic-bezier(0.34, 1.56, 0.64, 1);
  animation: rainbow-shimmer 2.4s ease-in-out infinite;
}

